--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build_0.loader.js";
+      var loaderUrl = buildUrl + "/Build_1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build_0.data.br",
-        frameworkUrl: buildUrl + "/Build_0.framework.js.br",
-        codeUrl: buildUrl + "/Build_0.wasm.br",
+        dataUrl: buildUrl + "/Build_1.data",
+        frameworkUrl: buildUrl + "/Build_1.framework.js",
+        codeUrl: buildUrl + "/Build_1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "ArrowSpamNew",
