--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div id="unity-build-title">ArrowSpamNew</div>
       </div>
     </div>
+    <h3>CONTROLS: Player 1: Q, Player 2: P</h3>
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
