--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Unity WebGL Player | ArrowSpamNew</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8874568529627014"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
